IE8 fix for event list item z-index issues on hover

--- a/static_files/assets/scss/_views-frontend.scss
+++ b/static_files/assets/scss/_views-frontend.scss
@@ -275,6 +275,10 @@ ul.event-list {
       right: 0;
       bottom: 0;
       left: 0;
+      @include body-prefix(ie8) {
+        background: transparent url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
+        background-repeat: no-repeat;
+      }
     }
 
     &:hover {
